Fixed bug #27295 (memory leak inside sscanf()).